--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,8 @@
   "author": "Janith Gamage",
   "licence": "MIT",
   "version": "1.4.0",
-  "private": false,
+  "private": true,
+  "proxy": "http://localhost:8080/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -44,6 +45,7 @@
     "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.2",
     "apexcharts": "^3.35.0",
+    "axios": "^0.27.2",
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
@@ -55,8 +57,11 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.3.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "simplebar": "^5.3.6",
     "simplebar-react": "^2.3.6",
     "web-vitals": "^2.1.4",
