--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,11 +55,13 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
+    "react-data-table-component": "^7.5.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.3.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "simplebar": "^5.3.6",
