--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,9 @@
 {
   "name": "frontend",
   "author": "Janith Gamage",
-  "licence": "MIT",
+  "license": "MIT",
   "version": "1.4.0",
-  "private": true,
-  "proxy": "http://localhost:8080/",
+  "private": true, 
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
