--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "author": "Janith Gamage",
   "license": "MIT",
   "version": "1.4.0",
-  "private": true, 
+  "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -57,6 +57,7 @@
     "react-data-table-component": "^7.5.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.3.0",
+    "react-razorpay": "^1.1.5",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
