--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,8 @@
     "@emotion/styled": "^11.8.1",
     "@faker-js/faker": "^6.1.2",
     "@iconify/react": "^3.2.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/styles": "^4.11.5",
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.2",
