--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "author": "Janith Gamage",
   "license": "MIT",
   "version": "1.4.0",
-  "private": true, 
+  "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -42,6 +42,10 @@
     "@iconify/react": "^3.2.1",
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.1",
+    "@progress/kendo-drawing": "^1.16.3",
+    "@progress/kendo-licensing": "^1.2.2",
+    "@progress/kendo-react-pdf": "^5.3.0",
+    "@progress/kendo-theme-default": "^5.4.1",
     "@testing-library/jest-dom": "^5.16.2",
     "apexcharts": "^3.35.0",
     "axios": "^0.27.2",
